[tool.poetry]
name = "dreamcoder"
version = "0.1.0"
description = "A modern program synthesis library"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
cairocffi = "^1.2.0"
certifi = "^2021.5.30"
cffi = "^1.14.6"
chardet = "^4.0.0"
colorama = "^0.4.4"
Cycler = "^0.10.0"
dill = "^0.3.4"
frozendict = "^2.0.3"
graphviz = "^0.17"
idna = "^3.2"
joblib = "^1.0.1"
kiwisolver = "^1.3.1"
matplotlib = "^3.4.2"
multiprocess = "^0.70.12"
nltk = "^3.6.2"
numpy = "^1.21.1"
pathos = "^0.2.8"
Pillow = "^8.3.1"
pox = "^0.3.0"
ppft = "^1.6.6"
protobuf = "^3.17.3"
psutil = "^5.8.0"
pycparser = "^2.20"
pygame = "^2.0.1"
pyparsing = "^2.4.7"
pypng = "^0.0.20"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
pyzmq = "^22.2.1"
requests = "^2.26.0"
scikit-learn = "^0.24.2"
sexpdata = "^0.0.3"
six = "^1.16.0"
torch = "^1.9.0"
torchvision = "^0.10.0"
urllib3 = "^1.26.6"
Box2D-kengz = "^2.3.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
